--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,4 @@
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -85,5 +86,8 @@ body {
   .card {
     border: 1px solid #e2e8f0 !important;
     box-shadow: none !important;
+    page-break-inside: avoid;
   }
 }
+
+    
